updated params and repositorie
